fixed up alignments and did CS and JS work

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 
 html{
+    height: 100%;
+    background-color: rgb(0, 0, 0);
     height: 100vh;
 }
 
@@ -16,7 +18,13 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    padding: 30px;
+    padding: 50px;
+    background-size: cover;
+    background-position: center;
+
+    
+
+
 }
 
 
@@ -26,6 +34,8 @@ body{
     left: 0;
     width: 100%;
     height: 100vh;
+
+    
 }
 header{
     justify-content: space-between;
@@ -35,36 +45,36 @@ header{
 h1{
     z-index: 1;
     position: absolute;
-    font-size: 5rem;
+    font-size: 3rem;
     background-color: rgba(255, 255, 255, 0.027);
     color: rgba(255, 255, 255, 0.712);
     font-family: holtwood One SC , sans-serif;
     flex: 1;
 }
 form{
-    min-height: 20vh;
+    min-height: 20px;
     display:flex;
     align-items: center;
     z-index: 1;
-    padding-top: 150px;
-    
-
+    padding-top: 10px;
+    width: 30%;
+    height: auto;
 }
 
 form input,form button{
-    padding:0,5rem;
-    font-size:4rem;
+    padding:0,.5rem;
+    font-size:2rem;
     border:none;
     background:rgba(0, 0, 0, 0.438);
     z-index: 1;
     position: relative;
-    color: rgba(255, 255, 255, 0.822);
+    color: rgba(255, 255, 255, 0.589);
 
 }
 
 
 form button{
-    color:rgba(255, 255, 255, 0.116);
+    color:rgba(255, 255, 255, 0.425);
     cursor: pointer;
     transition: all 0.3s ease;
     background-color: rgba(170, 27, 27, 0);
@@ -99,7 +109,7 @@ form button:hover{
     background: rgba(0, 0, 0, 0.349);
     color:whitesmoke;
     display: flex;
-    font-size: 1rem;
+    font-size: 2.5rem;
     justify-content: space-between;
     align-items: center;
     transition: all .5s ease;
@@ -114,7 +124,7 @@ form button:hover{
 }
 
 .complete-btn, .trash-btn{
-    padding: 1rem;
+    padding: .5rem;
     cursor: pointer;
     font-size:2rem;
     border: .2rem solid;
@@ -134,7 +144,7 @@ form button:hover{
 
 .todo-item{
     padding: 0rem 0.5rem;
-    font-size:2rem;
+    font-size:1rem;
 
 }
 
@@ -206,7 +216,6 @@ option {
     font-size: 3rem;
     z-index: 1;
     position: relative;
-    padding-left: 100px;   
     align-items: right;
     flex:1;
     color: white;
